--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "discover",
   "version": "0.0.0",
   "license": "MIT",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "electron": "electron .",
+    "electron-build": "ng build --prod && electron ."
   },
   "private": true,
   "dependencies": {
@@ -25,6 +28,7 @@
     "@angular/router": "^4.0.0",
     "angular-relative-date": "^2.1.1",
     "core-js": "^2.4.1",
+    "electron": "^1.7.10",
     "ngx-clipboard": "^8.1.1",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
